# extraction-ml-1

./: .gitignore  CLAUDE.md  LOCAL_DEV.md  README.md  docker-compose.yml  pyproject.toml
docs/: data_specification.md
ner/: __init__.py  bio.py  constants.py  preprocess.py  schema.py
ner/data/: assembler.py  free_gen.py  noise.py  pools.py  slot_fill.py
ner/eval/: gold.py  metrics.py  threshold_sweep.py
ner/export/: onnx_export.py
ner/infer/: __init__.py  runtime.py
ner/llm/: claude_generator.py
ner/train/: dataset.py  metrics.py  train.py
notebooks/: colab_train.ipynb
requirements/: data.txt  inference.txt  train.txt
scripts/: build_seed.py  export_onnx.py  generate_data.py  infer.py  init_postgres.py  train.py  tune_threshold.py
scripts/seedgen/: __init__.py  addresses.py  commodities.py  decoys.py  orgs.py  persons.py  templates.py
sql/: example_seed.sql  schema.sql  seed.sql
sql/postgres/: example_seed.sql  schema.sql  seed.sql
tests/: test_bio.py  test_free_gen.py  test_gold_and_metrics.py  test_noise.py  test_pools_sqlite.py  test_preprocess.py  test_runtime_preprocess.py  test_schema.py  test_seed_full.py  test_slot_fill.py  test_threshold_sweep.py
