[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ner-system"
version = "0.1.0"
description = "DeBERTa-v3 BIO NER for PERSON / ORG / ADDRESS / COMMODITY with ONNX serving"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
inference = [
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "tokenizers>=0.20",
]
train = [
    "torch>=2.3",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "seqeval>=1.2.2",
    "onnx>=1.16",
    "onnxruntime>=1.18",
]
data = [
    "anthropic>=0.40",
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["ner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
